# tomatempo

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
docs/specs/: 001_task_project_core.md  002_tagging_core.md  003_csv_import.md  004_task_listing_and_filters.md  005_batch_task_editing.md  006_pomodoro_sessions.md  007_task_pomodoro_estimates_and_progress.md
src/application/: __init__.py  use_cases.py
src/domain/: __init__.py  entities.py  value_objects.py
src/infrastructure/: __init__.py  database.py
src/interface/: __init__.py
src/interface/web/: main.py
src/tomatempo/: __init__.py
src/tomatempo/application/: batch_task_editing.py  csv_import.py  pomodoro_sessions.py  ports.py  projects.py  tags.py  task_listing.py  task_pomodoro_progress.py  tasks.py  use_cases.py
src/tomatempo/domain/: entities.py  exceptions.py  value_objects.py
src/tomatempo/infrastructure/: config.py  database.py
src/tomatempo/interface/web/: main.py
tests/: test_app.py
tests/application/: conftest.py  test_batch_task_editing.py  test_csv_import.py  test_pomodoro_sessions.py  test_tagging_core.py  test_task_listing_and_filters.py  test_task_pomodoro_estimates_and_progress.py  test_task_project_core.py
