[tool.poetry]
name = "tomatempo"
version = "0.1.0"
description = "Tomatempo is a SQL-backed, automation-friendly Pomodoro task manager focused on batch operations, CSV workflows, and full data control."
authors = ["André Carvalho <me@andrev.me>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.3"
fastapi = "^0.115.0"
jinja2 = "^3.1.4"
psycopg = {extras = ["binary"], version = "^3.2.1"}
pydantic-settings = "^2.5.2"
python-dotenv = "^1.0.1"
sqlmodel = "^0.0.22"
uvicorn = {extras = ["standard"], version = "^0.30.6"}

[tool.poetry.group.dev.dependencies]
httpx = "^0.28.1"
mypy = "^1.11.2"
pytest = "^8.3.3"
ruff = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
cache-dir = "/tmp/tomatempo-ruff-cache"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
mypy_path = "src"
cache_dir = "/tmp/tomatempo-mypy-cache"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
cache_dir = "/tmp/tomatempo-pytest-cache"
markers = [
    "revised: marks tests manually reviewed and protected from modification by agents",
]
